k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tiketi
  labels:
    name: tiketi
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
