k8s/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    # alb.ingress.kubernetes.io/group.name: tiketi-monitoring
    
    # Security Group 자동 관리
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"
    
    # EKS VPC의 Public Subnet 명시
    alb.ingress.kubernetes.io/subnets: subnet-0e098e4b5fa78a29d,subnet-05255e0bdca84d6d7
    
    alb.ingress.kubernetes.io/healthcheck-path: /api/health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/tags: Environment=dev,Service=monitoring,Team=tiketi
spec:
  ingressClassName: alb
  rules:
    - host: monitoring.tiketi.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
